--- a/draft_motion.css
+++ b/draft_motion.css
@@ -4,6 +4,7 @@
 
 /* Style for the overall container */
 #container {
+    font-family: Georgia, 'Times New Roman', Times, serif;
     width: 600px;
     margin: 0 auto;
     padding: 20px;
@@ -18,7 +19,6 @@
 
 /* Style for titles */
 .title {
-    font-family: Arial, sans-serif;
     font-size: 24px;
     font-weight: bold;
     color: black;
@@ -27,14 +27,12 @@
 }
 
 h1, h2 {
-    font-family: Arial, sans-serif;
     font-weight: bold;
     color: black;
     font-size: 16px;
 }
 
 .subtitle {
-    font-family: Arial, sans-serif;
     font-size: 18px;
     color: gray;
     /* margin-bottom: 20px; */
