--- a/index-home.css
+++ b/index-home.css
@@ -12,7 +12,7 @@ body{
     width: 80%;
     height: 100%;
     justify-content: center;
-    border-radius: 5%;
+    border-radius: 25px;
     background-color: white;
 
 }
