--- a/styles.css
+++ b/styles.css
@@ -23,22 +23,13 @@ body, html{
 }
 
 
-
-.box{
-    position: absolute;
-    width: 320px;
-    height: 462px;
-    flex-direction: column;
-    background-color: #3F3F4D;
-    box-shadow: 5px 5px 15px rgba(0,0,0,0.3);
-}
-
 .box-top{
     z-index: 1;
     transform: translate(15px, -15px);
     width: 320px;
     height: 462px;
-    background-color: #4F4F61;
+    background-color: #eeeef6;
+    background-blend-mode: luminosity;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -50,17 +41,14 @@ body, html{
 
 .login-info{
     text-align: center;
-    color: white;
+    color: darkgray;
     font-size: 20px;
     font-family : 'Pacifico', cursive;
     margin-bottom: -20px;
 }
 
 .rr-logo{
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    color: rgb(98, 95, 95);
     font-family: 'Pacifico', cursive;
     font-size: 35px;
     font-weight: bold; 
@@ -75,6 +63,10 @@ form{
     flex-direction: column;
     align-items: flex-start;
     margin-top: 20px;
+}
+
+input[type="text"], input[type="password"]{
+   background-color: rgb(237, 251, 251);
 }
 
 form label{
