--- a/index-home.css
+++ b/index-home.css
@@ -1,5 +1,14 @@
+:root {
+    --color1: #AD3176;
+    --color2: #E8C4D4;
+    --color3: #C6E6DB;
+    --color4: #006B8F;
+    --color5: #003E7F;
+    --color6: #885A5A;
+}
+
 body{
-    background-color: antiquewhite;
+    background-color: white;
 }
 .web-container{
     display: flex;
@@ -45,6 +54,23 @@ body{
     align-items: center;
     font-size: 11px;
 }
+
+.team:nth-child(1) {
+    background-color: var(--color1);
+}
+
+.team:nth-child(2) {
+    background-color: var(--color2);
+}
+
+.team:nth-child(3) {
+    background-color: var(--color3);
+}
+
+.team:nth-child(4) {
+    background-color: var(--color4);
+}
+
 
 .add-team{
     display: flex;
