--- a/team_home.css
+++ b/team_home.css
@@ -1,5 +1,6 @@
 body{
     background-color: gainsboro;
+    height: 100%;
 }
 
 .web-container{
@@ -10,12 +11,11 @@ body{
     gap: 50px;
     font-size: 30px;
     font-family: sans-serif;
-    width: 80%;
-    height: 100%;
+    width: 93%;
+    height: 88vh;
     justify-content: flex-start;
-    border-radius: 10%;
+    border-radius: 20px;
     background-color: white;
-    
 
 }
 
@@ -34,7 +34,7 @@ body{
     display: flex;
     flex-direction: column;
     border: solid, 1px, black;
-    border-radius: 5%;
+    border-radius: 5px;
     width:75%;
     height: 100px;
 }
@@ -104,7 +104,7 @@ body{
 }
 
 .text-5{
-    font-size: 25%;
+    font-size: 40%;
 }
 
 img{
