--- a/index-home.css
+++ b/index-home.css
@@ -8,7 +8,7 @@
 }
 
 body{
-    background-color: white;
+    background-color: gainsboro;
 }
 .web-container{
     display: flex;
@@ -18,11 +18,12 @@ body{
     gap: 50px;
     font-size: 30px;
     font-family: sans-serif;
-    width: 80%;
-    height: 100%;
+    width: 93%;
+    height: 87vh;
+    border-radius: 10px;
     justify-content: center;
-    border-radius: 5%;
     background-color: white;
+    justify-content: flex-start;
 
 }
 
