--- a/draft_motion.css
+++ b/draft_motion.css
@@ -70,13 +70,91 @@ h1, h2 {
 
 /*discussion page*/
 
-/* Container styling */
-#discussion-container {
-    width: 600px;
+/* Sidebar styling */
+#main-container {
+    display: flex;
+    width: 100%;
+    max-width: 1000px;
+    margin: 0 auto;
+    gap: 20px; /* Add space between sidebar and discussion container */
+}
+
+#sidebar-container {
+    width: 200px;
     margin: 0 auto;
     padding: 20px;
     background-color: lightgray;
     border-radius: 10px;
+}
+
+#sidebar-header {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    text-align: left;
+    margin-bottom: 10px;
+}
+#sidebar-header h1{
+    font-family: Arial, sans-serif;
+    font-size: 10px;
+    color: gray;
+}
+ /* Dropdown Button */
+ .dropbtn {
+    background-color: white;
+    color: black;
+    border: none;
+    cursor: pointer;
+    font-family: 'Times New Roman', Times, serif;
+  }
+  
+  /* Dropdown button on hover & focus */
+  .dropbtn:hover, .dropbtn:focus {
+    background-color: darkgray;
+  }
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: block;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    background-color: #f1f1f1;
+    min-width: 100%;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    text-overflow: ellipsis;
+    padding: 10px;
+    margin-top: 5px;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: flex;
+    block-size: 20px;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background-color: #ddd;}
+  
+  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+  .show {display:block;} 
+
+/* Container styling */
+#discussion-container {
+    width: 600px;
+    margin-right: 15%;
+    padding: 20px;
+    background-color: lightgray;
+    border-radius: 10px;
+    float: right;
 }
 
 /* Header styling */
@@ -116,7 +194,7 @@ h1, h2 {
 }
 
 .message {
-    width: 50%; /* Limit each message width to 50% */
+    width: 90%; /* Limit each message width to 50% */
     background-color: white;
     border: 1px solid #999999; /* Set border color */
     border-radius: 0.5em; /* Set border radius */
@@ -126,6 +204,8 @@ h1, h2 {
     
     display: flex; /* Make message a flex container */
     flex-direction: column; /* Arrange items vertically */
+
+    font-size: 0.9rem;
 }
 
 .username {
