--- a/draft_motion.css
+++ b/draft_motion.css
@@ -83,7 +83,7 @@ h1, h2 {
     width: 200px;
     margin: 0 auto;
     padding: 20px;
-    background-color: lightgray;
+    background-color: rgba(255,255,255,0.6);;
     border-radius: 10px;
 }
 
@@ -152,7 +152,7 @@ h1, h2 {
     width: 600px;
     margin-right: 15%;
     padding: 20px;
-    background-color: lightgray;
+    background-color: rgba(255,255,255,0.6);;
     border-radius: 10px;
     float: right;
 }
@@ -167,8 +167,8 @@ h1, h2 {
 
 #discussion-header h1,
 #discussion-header h2 {
-    font-family: Arial, sans-serif;
-    color: black;
+    font-family: 'Franklin Gothic Medium', Arial, sans-serif;
+    color: rgb(60,60,75);
 }
 
 /* Chat section styling */
