--- a/create_comittee.css
+++ b/create_comittee.css
@@ -1,4 +1,13 @@
 /* General styles */
+:root {
+    --color1: #AD3176;
+    --color2: #E8C4D4;
+    --color3: #C6E6DB;
+    --color4: #006B8F;
+    --color5: #003E7F;
+    --color6: #885A5A;
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -43,8 +52,11 @@ input[type="text"], textarea {
 }
 
 .home-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
     padding: 10px 15px;
-    background-color: #007BFF;
+    background-color: var(--color2);
     color: white;
     border: none;
     border-radius: 4px;
@@ -52,16 +64,17 @@ input[type="text"], textarea {
     font-weight: bold;
     text-align: center;
     transition: background-color 0.3s, box-shadow 0.3s;
+    text-decoration: none;
 }
 
 .home-button:hover {
-    background-color: #0056b3;
+    background-color: var(--color1);
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 button {
     padding: 10px 15px;
-    background-color: #007BFF;
+    background-color: var(--color4);
     color: white;
     border: none;
     border-radius: 4px;
@@ -72,7 +85,7 @@ button {
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: var(--color5);
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
