--- a/index-home.css
+++ b/index-home.css
@@ -1,3 +1,12 @@
+:root {
+    --color1: #AD3176;
+    --color2: #E8C4D4;
+    --color3: #C6E6DB;
+    --color4: #006B8F;
+    --color5: #003E7F;
+    --color6: #885A5A;
+}
+
 body{
     background-color: #f4f4f4;
 }
@@ -76,15 +85,22 @@ body{
 }
 
 
-.add-team{
+.add-team {
     display: flex;
     flex-direction: column;
-    width: 100px;
-    height: 100px;
-    border-radius: .75;
-    font-size: 11px;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+   
+    color: white;
+    padding: 15px;
+    margin: 10px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    text-align: center;
+    width: 50px;
+    height: 50px; /* Adjust height as needed */
+    font-size: 8px;
 }
 
 img {
@@ -99,7 +115,7 @@ a {
 
 #toggleDarkMode {
     padding: 5px 10px; /* Smaller padding */
-    background-color: #007BFF; /* Blue background */
+    background-color: var(--color4); /* Blue background */
     color: white; /* White text */
     border: none; /* No border */
     border-radius: 4px; /* Rounded corners */
@@ -111,7 +127,7 @@ a {
 }
 
 #toggleDarkMode:hover {
-    background-color: #0056b3; /* Darker blue on hover */
+    background-color: var(--color5); /* Darker blue on hover */
 }
 
 /*.outer-teams{
