--- a/discussion.css
+++ b/discussion.css
@@ -223,7 +223,8 @@ h1, h2 {
     padding: 8px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    margin-right: 5px;
+    margin-left: 5px;
+    width: 95%;
 }
 
 .btn {
