--- a/draft_motion.css
+++ b/draft_motion.css
@@ -8,11 +8,31 @@
     --color6: #885A5A;
 }
 
+
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
+}
+
+.home-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    padding: 8px 12px;
+    background-color: var(--color2);
+    color: white;
+    text-decoration: none;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-weight: bold;
+    
+}
+.home-button:hover {
+    background-color: var(--color1);
 }
 
 .container {
